--- a/lab/starter-code/assets/css/main.css
+++ b/lab/starter-code/assets/css/main.css
@@ -31,7 +31,6 @@ footer, header, hgroup, menu, nav, section {
 
 body {
 	line-height: 1;
-	font-family: 'Shadows Into Light Two', cursive;
 }
 
 ol, ul {
@@ -85,7 +84,7 @@ input, select, textarea {
 
 	body {
 		background: #fff;
-		font-family: 'Source Sans Pro', sans-serif;
+		font-family: 'Bad Script', cursive;
 		font-size: 19pt;
 		font-weight: 300;
 		line-height: 1.75em;
