--- a/lab/starter-code/assets/css/main.css
+++ b/lab/starter-code/assets/css/main.css
@@ -2233,8 +2233,9 @@ input, select, textarea {
 			}
 
 			#main > section.one {
-				background-color: #81918E;
-				background-image: url("../../images/banner.jpg");
+				/* background-color: #81918E; */
+				/* background-image: url(""); */
+	
 			}
 
 			#main > section.two {
