--- a/lab/starter-code/assets/css/main.css
+++ b/lab/starter-code/assets/css/main.css
@@ -103,7 +103,7 @@ input, select, textarea {
 		}
 
 	input, textarea, select {
-		font-family: 'Source Sans Pro', sans-serif;
+		font-family: 'Bad Script', cursive;
 		font-size: 19pt;
 		font-weight: 300;
 		line-height: 1.75em;
@@ -2368,7 +2368,7 @@ input, select, textarea {
 		display: none;
 	}
 
-	@media screen and (max-width: 960px) {
+	@media screen (min-width: 768px) and (max-width: 960px) {
 
 		/* Basic */
 
